# wsws-tts

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
src/wsws_tts/: __main__.py  audio.py  chunking.py  cli.py  extract.py  tts.py
src/wsws_tts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chunking.py  test_extract.py
